# CasHash_CUDA

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: FeatureCache.h  HashMatcher.h  KeyFileReader.h  Share.h
src/: HashMatcher.cpp  HashMatcher.cu  KeyFileReader.cpp  TestHashConverter.cpp  TestHashMatcher.cpp  main.cpp
